# nxp-pac

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-BSD3  LICENSE-MIT  LICENSE-THIRD-PARTY  README.md  build.rs
.github/ci/: doc.sh
data/metadata/: LPC55S16.json  LPC55S6x.json  MIMXRT1011.json  MIMXRT106x.json  schema.json
data/transforms/imxrt/: lpuart.yaml
data/transforms/mcxa/: adc.yaml  flexpwm.yaml  gpio.yaml  i3c.yaml  inputmux.yaml  lpi2c.yaml  lpuart.yaml  mrcc.yaml  port.yaml  rtc.yaml  scg.yaml  spc.yaml  trng.yaml
generator/: Cargo.toml  README.md
generator/src/: iomuxc.rs  main.rs  metadata.rs  pac.rs
generator/src/rt1xxx/: mod.rs  sigmap.rs
metadata-generator/: Cargo.toml
metadata-generator/src/: main.rs  part_number.rs  signal_configuration.rs
nxp-pac/: Cargo.toml  README.md  rust-toolchain.toml
nxp-pac/src/: metadata.rs
src/: lib.rs  metadata.rs
src/chips/lpc55s16/: _vectors.rs  adc0.rs  ahb_secure_ctrl.rs  anactrl.rs  can0.rs  cdog.rs  device.x  flash_cmpa.rs  flash_nmpa.rs  flash_rompatch.rs  hashcrypt.rs  i2s.rs  mod.rs  pmc.rs  prince.rs  puf.rs  puf_sram_ctrl.rs  rng.rs  syscon.rs  sysctl.rs  usbhsh.rs  usbphy.rs
src/chips/lpc55s69_cm33_core0/: metadata.rs  mod.rs  nvic.rs  sau.rs
src/chips/lpc55s69_cm33_core1/: metadata.rs  mod.rs  scb.rs  sct0.rs
src/chips/mcxa256/: _vectors.rs  adc.rs  can.rs  crc.rs  crc0.rs  ctimer.rs  dac.rs  dac0.rs  dma0.rs  edma_0_tcd0.rs  eim.rs  eim0.rs  eqdc.rs  erm0.rs  flexio.rs  flexio0.rs  flexpwm.rs  fmc0.rs  fmu.rs  freqme.rs  glikey0.rs  hsadc.rs  i3c0.rs  inputmux0.rs  lptmr0.rs  (+40 more)
src/metadata/: mcxn947_cm33_core1.rs  mimxrt1011.rs  mimxrt1062.rs
transforms/: lpc55s16.yaml  lpc55s69_cm33.yaml  mcxa256.yaml  mimxrt1011.yaml  mimxrt1062.yaml  mimxrt1064.yaml  mimxrt685s_cm33.yaml  remove-suffix.yaml
transforms/imxrt1064/: renames.yaml
transforms/mcx/: dma.yaml  gpio.yaml  mrcc.yaml  port.yaml
transforms/mcxa/: adc.yaml  can.yaml  cdog.yaml  crc.yaml  ctimer.yaml  dma.yaml  gpio.yaml  lpi2c.yaml  lpuart.yaml  mbc.yaml  ostimer.yaml  port.yaml  trng.yaml  wwdt.yaml
(+411 files in other folders)
