[workspace]
members = [ "generator" ]

[package]
name = "nxp-pac"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Peripheral Access Crate (PAC) for NXP Semiconductor chips."
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "peripherals",
    "nxp",
    "imxrt",
]
homepage = "https://github.com/embassy-rs/nxp-pac"
repository = "https://github.com/embassy-rs/nxp-pac"
documentation = "https://docs.embassy.dev/nxp-pac"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/nxp-pac/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/nxp-pac/blob/$COMMIT/src/"
features = ["rt"]
flavors = [
    { regex_feature = "mimxrt1.*",  target = "thumbv7em-none-eabihf" },
    { regex_feature = "mimxrt6.*",  target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "mcx.*",      target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "lpc55s69.*", target = "thumbv8m.main-none-eabihf" }
]

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
defmt = { version = "0.3.10", optional = true }

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = []
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]

metadata = []

#! Chip features

## IMXRT
mimxrt1011 = []
mimxrt1062 = []
mimxrt1064 = []
mimxrt685s_cm33 = []

## MCX
mcxn947_cm33_core0 = []
mcxn947_cm33_core1 = []
mcxa256 = []

## LPC55S16
lpc55s16 = []

## LPC55S69
lpc55s69_cm33_core0 = []
lpc55s69_cm33_core1 = []
